--- a/Material App/app/src/main/res/values/strings.xml
+++ b/Material App/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Material  App</string>
+    <string name="text_title">Design</string>
+    <string name="text_subtitle">Material Design</string>
 </resources>
